--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </tr>
   <tr>
     <td>Alfreds Futterkiste</td>
-    <td>Germany</td>
+    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
   </tr>
   <tr>
     <td>Berglunds snabbkop</td>
