--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <table id="myTable">
   <tr class="header">
-    <th style="width:60%;">Name</th>
-    <th style="width:40%;">Country</th>
+    <th style="width:60%;">Book Name</th>
+    <th style="width:40%;"> </th>
   </tr>
   <tr>
     <td>Alfreds Futterkiste</td>
