--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
 </head>
 <body>
 
-<h2>My Customers</h2>
-
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 
 <table id="myTable">
@@ -51,7 +49,7 @@
     <th style="width:40%;"> </th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
+    <td>CBR တိုင်းနည်း</td>
     <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
   </tr>
   <tr>
