--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search books..." title="Type in a name">
 
 <table id="myTable">
   <tr class="header">
