--- a/refer.html
+++ b/refer.html
@@ -57,6 +57,10 @@
     <td>CBR တိုင်းနည်း</td>
     <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
   </tr>
+<tr>
+    <td>Book name</td>
+    <td><a href="Links">Read Now</a></td>
+  </tr>
   
   
   
