--- a/other.html
+++ b/other.html
@@ -58,8 +58,8 @@
     <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
   </tr>
 <tr>
-    <td>SketchUp Pro 2020 </td>
-    <td><a href="https://drive.google.com/file/d/1zH0qVvMOwV459fFovqLxMqhAcUY1KER2/view?usp=sharing">Read Now</a></td>
+    <td>Steel Structure </td>
+    <td><a href="https://drive.google.com/file/d/1zPkoQGCjgj0C0Fnr8pxFJj1BDI5aFsPH/view?usp=sharing">Read Now</a></td>
   </tr>
   
   
