--- a/other.html
+++ b/other.html
@@ -54,17 +54,21 @@
   
   
   <tr>
-    <td>CBR တိုင်းနည်း</td>
+    <td>1-CBR တိုင်းနည်း</td>
     <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
   </tr>
 <tr>
-    <td>SketchUp 2020pro</td>
+    <td>2-SketchUp 2020pro</td>
     <td><a href="https://drive.google.com/file/d/1zH0qVvMOwV459fFovqLxMqhAcUY1KER2/view?usp=sharing">Read Now</a></td>
   </tr>
 
 <tr>
-    <td>Steel Structure </td>
+    <td>3-Steel Structure </td>
     <td><a href="https://drive.google.com/file/d/1zPkoQGCjgj0C0Fnr8pxFJj1BDI5aFsPH/view?usp=sharing">Read Now</a></td>
+  </tr>
+<tr>
+    <td>4-AUTOCAD 2015</td>
+    <td><a href="https://drive.google.com/file/d/1zTMaf-tDELLckyPf7MfTnfOl4F5eyCBV/view?usp=sharing">Read Now</a></td>
   </tr>
   
   
