--- a/other.html
+++ b/other.html
@@ -70,6 +70,10 @@
     <td>4-AUTOCAD 2015</td>
     <td><a href="https://drive.google.com/file/d/1zTMaf-tDELLckyPf7MfTnfOl4F5eyCBV/view?usp=sharing">Read Now</a></td>
   </tr>
+<tr>
+    <td>5-Condominium</td>
+    <td><a href="https://drive.google.com/file/d/1zlysqfz-GWW0r21TRCOhd3slRrL1SFBW/view?usp=sharing">Read Now</a></td>
+  </tr>
   
   
   
