--- a/other.html
+++ b/other.html
@@ -55,16 +55,16 @@
   
   <tr>
     <td>1-CBR တိုင်းနည်း</td>
-    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 <tr>
     <td>2-SketchUp 2020pro</td>
-    <td><a href="https://drive.google.com/file/d/1zH0qVvMOwV459fFovqLxMqhAcUY1KER2/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1zH0qVvMOwV459fFovqLxMqhAcUY1KER2/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 
 <tr>
     <td>3-Steel Structure </td>
-    <td><a href="https://drive.google.com/file/d/1zPkoQGCjgj0C0Fnr8pxFJj1BDI5aFsPH/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1zPkoQGCjgj0C0Fnr8pxFJj1BDI5aFsPH/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 <tr>
     <td>4-AUTOCAD 2015</td>
