--- a/other.html
+++ b/other.html
@@ -53,9 +53,9 @@
   
   
   
-  <tr>
+  <tr  style="background-color:red;">
     <td>1-CBR တိုင်းနည်း</td>
-    <td style="background-color:white"><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing" target="_blank">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 <tr>
     <td>2-SketchUp 2020pro</td>
