--- a/other.html
+++ b/other.html
@@ -39,7 +39,7 @@
 }
 </style>
 </head>
-<body>
+<body style="background-color:red;">
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search books..." title="Type in a name">
 
