--- a/des/2.html
+++ b/des/2.html
@@ -71,7 +71,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </header>
 
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+  <div class="w3-container w3-padding-32 w3-center w3-black" id="about">
     <h2 class="w3-text-light-grey">ROADS</h2>
     <hr style="width:200px" class="w3-opacity">
    
