--- a/other.html
+++ b/other.html
@@ -39,7 +39,7 @@
 }
 </style>
 </head>
-<body style="background-color:red;">
+<body style="background-color:#ffcccc;">
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search books..." title="Type in a name">
 
@@ -68,11 +68,11 @@
   </tr>
 <tr>
     <td>4-AUTOCAD 2015</td>
-    <td><a href="https://drive.google.com/file/d/1zTMaf-tDELLckyPf7MfTnfOl4F5eyCBV/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1zTMaf-tDELLckyPf7MfTnfOl4F5eyCBV/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 <tr>
     <td>5-Condominium</td>
-    <td><a href="https://drive.google.com/file/d/1zlysqfz-GWW0r21TRCOhd3slRrL1SFBW/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1zlysqfz-GWW0r21TRCOhd3slRrL1SFBW/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
   
   
