--- a/refer.html
+++ b/refer.html
@@ -39,7 +39,7 @@
 }
 </style>
 </head>
-<body>
+<body style="background-color:#2eb82e"> 
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search books..." title="Type in a name">
 
@@ -55,7 +55,7 @@
   
   <tr>
     <td>CBR တိုင်းနည်း</td>
-    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing">Read Now</a></td>
+    <td><a href="https://drive.google.com/file/d/1M8l7aa9_yboDUIGHL4Gme5JnyjU92nPa/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
 <tr>
     <td>Book name</td>
