--- a/other.html
+++ b/other.html
@@ -74,7 +74,10 @@
     <td>5-Condominium</td>
     <td><a href="https://drive.google.com/file/d/1zlysqfz-GWW0r21TRCOhd3slRrL1SFBW/view?usp=sharing" target="_blank">Read Now</a></td>
   </tr>
-  
+<tr>
+    <td>6-Landscaping</td>
+    <td><a href="https://drive.google.com/file/d/107QBSrX1zgJAW7l3b_sj0paq3PWkHiul/view?usp=sharing" target="_blank">Read Now</a></td>
+  </tr>  
   
   
   
